# BeagleBone-Beat-Box

./: .gitignore  README.md
app/: CMakeLists.txt
app/include/: airDrum.hpp  generateBeat.hpp  messageHandler.hpp  shutdown.hpp  textOutput.hpp
app/src/: airDrum.cpp  generateBeat.cpp  main.cpp  messageHandler.cpp  shutdown.cpp  socket.cpp
assignment_3/: CMakeLists.txt  README.md
assignment_3/app/include/: airDrum.hpp  controller.hpp  generateBeat.hpp  messageHandler.hpp  socket.hpp  textOutput.hpp
assignment_3/app/src/: airDrum.cpp  controller.cpp  generateBeat.cpp  main.cpp  messageHandler.cpp  socket.cpp  textOutput.cpp
assignment_3/common/src/: utils.cpp
assignment_3/hal/: CMakeLists.txt
assignment_3/hal/include/hal/: accelerometer.hpp  audioMixer.hpp  gpio.hpp  i2c.hpp  joystick.hpp  periodTimer.hpp
assignment_3/hal/src/: accelerometer.cpp  audioMixer.cpp  i2c.cpp
assignment_3/web-server/: .cproject  .project  Makefile  package-lock.json  package.json  server.js
assignment_3/web-server/lib/: udp_server.js
assignment_3/web-server/public/: index.html
assignment_3/web-server/public/css/: style.css
assignment_3/web-server/public/js/: index.js
common/: CMakeLists.txt
common/include/common/: utils.hpp
hal/include/hal/: accelerometer.hpp  audioMixer.hpp  gpio.hpp  periodTimer.hpp
hal/src/: accelerometer.cpp  audioMixer.cpp  gpio.cpp  joystick.cpp  periodTimer.cpp
web-server/: .cproject  .project  Makefile  package-lock.json  package.json  server.js
web-server/lib/: udp_server.js
web-server/public/: index.html
web-server/public/js/: index.js
